# oNeuro

./: .gitignore  LICENSE  README.md  pyproject.toml
demos/: bio_lora_molecular_demo.py  demo_beyond_ann.py  demo_brain_tasks.py  demo_dishbrain_pong.py  demo_doom_arena.py  demo_doom_hybrid_ppo.py  demo_doom_vizdoom.py  demo_drosophila_ecosystem.py  demo_emergent_cuda.py  demo_full_brain.py  demo_language_cuda.py  demo_language_learning.py  demo_molecular_emergence.py  demo_research_platforms.py  diag_architecture.py  diag_learning.py  diag_sparse.py  molecular_tissue_demo.py  psychopharmacology_demo.py
docs/: README.md  low_level_capability_suite_report.md  repo_structure.md  terrarium_rust_status.md  whole_cell_execution_plan.md  whole_cell_progress_ledger.md
docs/tutorials/: 01_getting_started.md  02_brain_regions.md  03_neurotransmitters.md  04_learning.md  08_applications.md  09_doom_arena.md
experiments/: benchmark_shared.py  corticostriatal_action_bias_benchmark.py  corticostriatal_mechanism_experiment.py  low_level_capability_suite.py  mega_benchmark.py  stimulus_discrimination_benchmark.py  training_comparison.py
experiments/legacy/: continual_learning_benchmark.py  molecular_vs_organic_benchmark.py
oneuro-3d/: Cargo.toml  README.md
oneuro-metal/: README.md
oneuro-metal/specs/: whole_cell_atomistic_templates.json  whole_cell_derivation_calibration.json  whole_cell_subsystems.json  whole_cell_syn3a_organism.json  whole_cell_syn3a_reference.json
oneuro-metal/src/: atomistic_topology.rs  lib.rs  molecular_dynamics.rs  python.rs  substrate_ir.rs  whole_cell.rs  whole_cell_data.rs  whole_cell_submodels.rs
oneuro-wasm/: Cargo.toml  README.md
oneuro-wasm/src/: lib.rs
oneuro-wasm/web/: README.md  full_integration.html  index.html  md_visualization.html
oneuro-wasm/web/prototypes/: README.md  clear_demo.html  consciousness_monitor.html  demo_explained.html  fast_md.html  fast_neural_md.html  molecular_ecosystem.html  terrarium.html  terrarium_final.html  terrarium_realistic.html
organic_neural/: README.md
organic_neural/experiments/: neurogenesis_benchmark.py  proven_experiments.py  publishable_experiments.py
organic_neural/src/: multi_tissue_network.py  organic_neural_network.py  quantum_consciousness.py  quantum_terrarium.py
papers/: beyond_ann_white_paper.md  dishbrain_replication_paper.md
papers/data/: results_dishbrain_drugs_medium.json  results_dishbrain_full_large.json  results_dishbrain_full_medium.json  results_doom_drugs_medium.json  results_doom_full_large.json
pharma_platform/: README.md  __init__.py
pharma_platform/benchmarks/: README.md
pharma_platform/docs/: README.md
pharma_platform/drugs/: __init__.py  extended_drug_library.py
pharma_platform/experiments/: README.md
pharma_platform/pathogens/: __init__.py  bacteria.py  parasite.py  prion.py  virus.py
pharma_platform/tests/: __init__.py  test_drug_efficacy.py
results/hybrid_ppo_aux_heads_20260310/: README.md  aux_default_seed42.json  aux_default_seed43.json  aux_default_seed44.json  aux_soft_seed42.json  aux_soft_seed43.json  aux_soft_seed44.json  baseline_seed42.json  baseline_seed43.json  baseline_seed44.json  summary.json
scripts/: generate_paper_figures.py  vast_deploy.sh
src/: comprehensive_brain.py
tests/: test_corticostriatal_action_bias_benchmark.py  test_corticostriatal_mechanism.py  test_low_level_capability_suite.py  test_molecular_validation.py  test_phase3_verification.py  test_stimulus_discrimination_benchmark.py  test_whole_cell.py  test_whole_cell_assets.py
(+131 files in other folders)
