[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "organic-neural"
version = "0.1.0"
description = "Biologically-inspired neural networks with neurogenesis, quantum effects, and reward-modulated learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Entropy Research", email = "research@entropy.ai"}
]
keywords = ["neural-networks", "neurogenesis", "quantum", "biologically-inspired", "neuromorphic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "mypy>=1.0"]
viz = ["matplotlib>=3.7.0"]

[project.urls]
Homepage = "https://github.com/entropy-research/organic-neural"
Repository = "https://github.com/entropy-research/organic-neural"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
